fix subnav not covering full width

--- a/css/styles.css
+++ b/css/styles.css
@@ -624,7 +624,7 @@ nav .sub-menu {
 }
 nav .sub-menu::before, nav .sub-menu::after {
   content: "";
-  width: 600px;
+  width: 2000px;
   position: absolute;
   top: 0;
   bottom: 0;
