--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -84,7 +84,7 @@ nav {
     &::before,
     &::after {
       content: '';
-      width: 600px;
+      width: 2000px;
       position: absolute;
       top: 0;
       bottom: 0;
